Added endpoint to get correct question answers.
OHM-1266: Create OHM endpoint that gets correct_answers without scoring
